{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 1035,
  "lineage": "5e084786-5bf7-d963-81e1-6ed47007bb19",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_alb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:283746063619:loadbalancer/app/infra/2e47c1a46e3ba963",
            "arn_suffix": "app/infra/2e47c1a46e3ba963",
            "desync_mitigation_mode": "defensive",
            "dns_name": "infra-1317460808.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:283746063619:loadbalancer/app/infra/2e47c1a46e3ba963",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "infra",
            "preserve_host_header": false,
            "security_groups": [
              "sg-05269b2017073b2aa"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05f0277596f0dadf2"
              },
              {
                "subnet_id": "subnet-075a3370523091969"
              },
              {
                "subnet_id": "subnet-07693eae93b4f0139"
              }
            ],
            "subnets": [
              "subnet-05f0277596f0dadf2",
              "subnet-075a3370523091969",
              "subnet-07693eae93b4f0139"
            ],
            "tags": {
              "ManagedBy": "Terraform",
              "env": "production",
              "name": "infra"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "env": "production",
              "name": "infra"
            },
            "vpc_id": "vpc-09a154d1f332d60ba",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "module.security_groups.aws_security_group.public-sg-prod",
            "module.vpc.aws_subnet.public-subnet-1",
            "module.vpc.aws_subnet.public-subnet-2",
            "module.vpc.aws_subnet.public-subnet-3",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:283746063619:listener/app/infra/2e47c1a46e3ba963/e0dc3cf1c20a6789",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:283746063619:targetgroup/infra/e1145a635d1e6194",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:283746063619:listener/app/infra/2e47c1a46e3ba963/e0dc3cf1c20a6789",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:283746063619:loadbalancer/app/infra/2e47c1a46e3ba963",
            "port": 3000,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2.aws_alb.alb",
            "module.ec2.aws_alb_target_group.tg-production",
            "module.security_groups.aws_security_group.public-sg-prod",
            "module.vpc.aws_subnet.public-subnet-1",
            "module.vpc.aws_subnet.public-subnet-2",
            "module.vpc.aws_subnet.public-subnet-3",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:283746063619:listener/app/infra/2e47c1a46e3ba963/88ef0586edf76423",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:283746063619:listener/app/infra/2e47c1a46e3ba963/88ef0586edf76423",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:283746063619:loadbalancer/app/infra/2e47c1a46e3ba963",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2.aws_alb.alb",
            "module.ec2.aws_alb_target_group.tg-production",
            "module.security_groups.aws_security_group.public-sg-prod",
            "module.vpc.aws_subnet.public-subnet-1",
            "module.vpc.aws_subnet.public-subnet-2",
            "module.vpc.aws_subnet.public-subnet-3",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "tg-production",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:283746063619:targetgroup/infra/e1145a635d1e6194",
            "arn_suffix": "targetgroup/infra/e1145a635d1e6194",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 10
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:283746063619:targetgroup/infra/e1145a635d1e6194",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "infra",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "target group",
              "env": "production"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "target group",
              "env": "production"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-09a154d1f332d60ba"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.endpoints",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "secret-manager-endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:283746063619:vpc-endpoint/vpce-07a5654edfa8f6b77",
            "dns_entry": [
              {
                "dns_name": "vpce-07a5654edfa8f6b77-3rl4fpio.secretsmanager.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "vpce-07a5654edfa8f6b77-3rl4fpio-us-west-2b.secretsmanager.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "vpce-07a5654edfa8f6b77-3rl4fpio-us-west-2c.secretsmanager.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "vpce-07a5654edfa8f6b77-3rl4fpio-us-west-2a.secretsmanager.us-west-2.vpce.amazonaws.com",
                "hosted_zone_id": "Z1YSA3EXCYUU9Z"
              },
              {
                "dns_name": "secretsmanager.us-west-2.amazonaws.com",
                "hosted_zone_id": "Z07646282DAUQOKFMQ7PV"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4"
              }
            ],
            "id": "vpce-07a5654edfa8f6b77",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-00de477326dc0e0f2",
              "eni-012dd654aee5cefa0",
              "eni-0bcce67ceefe09823"
            ],
            "owner_id": "283746063619",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-05a2283910a10c66a"
            ],
            "service_name": "com.amazonaws.us-west-2.secretsmanager",
            "state": "available",
            "subnet_ids": [
              "subnet-03f94bb19260aba20",
              "subnet-088da713fb663ef26",
              "subnet-0f3b578b2887c9892"
            ],
            "tags": {
              "Env": "production",
              "ManagedBy": "Terraform",
              "Name": "secret manager endpoint"
            },
            "tags_all": {
              "Env": "production",
              "ManagedBy": "Terraform",
              "Name": "secret manager endpoint"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-09a154d1f332d60ba"
          },
          "dependencies": [
            "module.security_groups.aws_security_group.private-sg-prod",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private-sg-prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:283746063619:security-group/sg-05a2283910a10c66a",
            "description": "Control to private access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "egress to internet",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05a2283910a10c66a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": " http access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": " https access",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": " https access",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": " ssh access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Security group producction private",
            "name_prefix": "",
            "owner_id": "283746063619",
            "revoke_rules_on_delete": false,
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "Private security group",
              "env": "production"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "Private security group",
              "env": "production"
            },
            "timeouts": null,
            "vpc_id": "vpc-09a154d1f332d60ba"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public-sg-prod",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:283746063619:security-group/sg-05269b2017073b2aa",
            "description": "Control to public access to ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "egress to internet",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05269b2017073b2aa",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": " http access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": " https access",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": " ssh access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "App access ",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "Security group producction public",
            "name_prefix": "",
            "owner_id": "283746063619",
            "revoke_rules_on_delete": false,
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "Public security group",
              "env": "production"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "Public security group",
              "env": "production"
            },
            "timeouts": null,
            "vpc_id": "vpc-09a154d1f332d60ba"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip-nat-gateway1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d39edee919e2ca30",
            "association_id": "eipassoc-05fc89cfadea063f7",
            "domain": "vpc",
            "id": "eipalloc-0d39edee919e2ca30",
            "network_border_group": "us-west-2",
            "network_interface": "eni-04ad79ae21d786ce5",
            "private_dns": "ip-172-16-101-198.us-west-2.compute.internal",
            "private_ip": "172.16.101.198",
            "public_dns": "ec2-44-225-173-28.us-west-2.compute.amazonaws.com",
            "public_ip": "44.225.173.28",
            "public_ipv4_pool": "amazon",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "Elastic ip 1 ",
              "env": "production"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "Elastic ip 1 ",
              "env": "production"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:283746063619:internet-gateway/igw-0372ba36d6f4a01fa",
            "id": "igw-0372ba36d6f4a01fa",
            "owner_id": "283746063619",
            "vpc_id": "vpc-09a154d1f332d60ba"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gateway-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d39edee919e2ca30",
            "association_id": "eipassoc-05fc89cfadea063f7",
            "connectivity_type": "public",
            "id": "nat-09887e130fd303736",
            "network_interface_id": "eni-04ad79ae21d786ce5",
            "private_ip": "172.16.101.198",
            "public_ip": "44.225.173.28",
            "subnet_id": "subnet-05f0277596f0dadf2",
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "Nat Gateway Public  1",
              "env": "production"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "Nat Gateway Public  1",
              "env": "production"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.eip-nat-gateway1",
            "module.vpc.aws_subnet.public-subnet-1",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:283746063619:route-table/rtb-0672daf6fd26c97e0",
            "id": "rtb-0672daf6fd26c97e0",
            "owner_id": "283746063619",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-09887e130fd303736",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "ManagedBy": "Terraform",
              "Name": "private Route Table",
              "env": "production"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "private Route Table",
              "env": "production"
            },
            "timeouts": null,
            "vpc_id": "vpc-09a154d1f332d60ba"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_nat_gateway.nat-gateway-1",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:283746063619:route-table/rtb-0a16f970b4dc55e6d",
            "id": "rtb-0a16f970b4dc55e6d",
            "owner_id": "283746063619",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0372ba36d6f4a01fa",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Env": "Production",
              "ManagedBy": "Terraform",
              "Name": "public Route Table"
            },
            "tags_all": {
              "Env": "Production",
              "ManagedBy": "Terraform",
              "Name": "public Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-09a154d1f332d60ba"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet-gateway",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnet-1-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f08fc29ca30ad76a",
            "route_table_id": "rtb-0672daf6fd26c97e0",
            "subnet_id": "subnet-03f94bb19260aba20"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip-nat-gateway1",
            "module.vpc.aws_nat_gateway.nat-gateway-1",
            "module.vpc.aws_route_table.private-route-table",
            "module.vpc.aws_subnet.private-subnet-1",
            "module.vpc.aws_subnet.public-subnet-1",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnet-2-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-034c85f9cd6d5ad9a",
            "route_table_id": "rtb-0672daf6fd26c97e0",
            "subnet_id": "subnet-0f3b578b2887c9892"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip-nat-gateway1",
            "module.vpc.aws_nat_gateway.nat-gateway-1",
            "module.vpc.aws_route_table.private-route-table",
            "module.vpc.aws_subnet.private-subnet-2",
            "module.vpc.aws_subnet.public-subnet-1",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-subnet-3-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06597b21c663e29ad",
            "route_table_id": "rtb-0672daf6fd26c97e0",
            "subnet_id": "subnet-088da713fb663ef26"
          },
          "dependencies": [
            "module.vpc.aws_eip.eip-nat-gateway1",
            "module.vpc.aws_nat_gateway.nat-gateway-1",
            "module.vpc.aws_route_table.private-route-table",
            "module.vpc.aws_subnet.private-subnet-3",
            "module.vpc.aws_subnet.public-subnet-1",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet-1-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04d85785728bc6246",
            "route_table_id": "rtb-0a16f970b4dc55e6d",
            "subnet_id": "subnet-05f0277596f0dadf2"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet-gateway",
            "module.vpc.aws_route_table.public-route-table",
            "module.vpc.aws_subnet.public-subnet-1",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet-2-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b1291c2a39b4ba24",
            "route_table_id": "rtb-0a16f970b4dc55e6d",
            "subnet_id": "subnet-07693eae93b4f0139"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet-gateway",
            "module.vpc.aws_route_table.public-route-table",
            "module.vpc.aws_subnet.public-subnet-2",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet-3-route-table-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c0584834daf981b7",
            "route_table_id": "rtb-0a16f970b4dc55e6d",
            "subnet_id": "subnet-075a3370523091969"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet-gateway",
            "module.vpc.aws_route_table.public-route-table",
            "module.vpc.aws_subnet.public-subnet-3",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:283746063619:subnet/subnet-03f94bb19260aba20",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "172.16.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03f94bb19260aba20",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "283746063619",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "Production",
              "ManagedBy": "Terraform",
              "Name": "private subnet 1 | App Tier"
            },
            "tags_all": {
              "Env": "Production",
              "ManagedBy": "Terraform",
              "Name": "private subnet 1 | App Tier"
            },
            "vpc_id": "vpc-09a154d1f332d60ba"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:283746063619:subnet/subnet-0f3b578b2887c9892",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "172.16.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f3b578b2887c9892",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "283746063619",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "Production",
              "ManagedBy": "Terraform",
              "Name": "private subnet 2 | App Tier "
            },
            "tags_all": {
              "Env": "Production",
              "ManagedBy": "Terraform",
              "Name": "private subnet 2 | App Tier "
            },
            "vpc_id": "vpc-09a154d1f332d60ba"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:283746063619:subnet/subnet-088da713fb663ef26",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "172.16.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-088da713fb663ef26",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "283746063619",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "Production",
              "ManagedBy": "Terraform",
              "Name": "private subnet 3 | Database Tier "
            },
            "tags_all": {
              "Env": "Production",
              "ManagedBy": "Terraform",
              "Name": "private subnet 3 | Database Tier "
            },
            "vpc_id": "vpc-09a154d1f332d60ba"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:283746063619:subnet/subnet-05f0277596f0dadf2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "172.16.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05f0277596f0dadf2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "283746063619",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "Production",
              "ManagedBy": "Terraform",
              "Name": "Public Subnet 1"
            },
            "tags_all": {
              "Env": "Production",
              "ManagedBy": "Terraform",
              "Name": "Public Subnet 1"
            },
            "vpc_id": "vpc-09a154d1f332d60ba"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:283746063619:subnet/subnet-07693eae93b4f0139",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "172.16.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07693eae93b4f0139",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "283746063619",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "Production",
              "ManagedBy": "Terraform",
              "Name": "Public Subnet 2"
            },
            "tags_all": {
              "Env": "Production",
              "ManagedBy": "Terraform",
              "Name": "Public Subnet 2"
            },
            "vpc_id": "vpc-09a154d1f332d60ba"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:283746063619:subnet/subnet-075a3370523091969",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "172.16.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-075a3370523091969",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "283746063619",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "Production",
              "ManagedBy": "Terraform",
              "Name": "Public Subnet 3"
            },
            "tags_all": {
              "Env": "Production",
              "ManagedBy": "Terraform",
              "Name": "Public Subnet 3"
            },
            "vpc_id": "vpc-09a154d1f332d60ba"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:283746063619:vpc/vpc-09a154d1f332d60ba",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0cf5abc9dcd1dc983",
            "default_route_table_id": "rtb-02b8877759bae1d71",
            "default_security_group_id": "sg-02717a4081d091aa4",
            "dhcp_options_id": "dopt-f8d05b80",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09a154d1f332d60ba",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02b8877759bae1d71",
            "owner_id": "283746063619",
            "tags": {
              "Env": "Production",
              "ManagedBy": "Terraform",
              "Name": "infra-vpc"
            },
            "tags_all": {
              "Env": "Production",
              "ManagedBy": "Terraform",
              "Name": "infra-vpc"
            }
          }
        }
      ]
    }
  ]
}